--- a/sw-ui-lib/projects/sw-ui/package.json
+++ b/sw-ui-lib/projects/sw-ui/package.json
@@ -8,5 +8,8 @@
   "dependencies": {
     "tslib": "^2.3.0"
   },
-  "sideEffects": false
+  "sideEffects": false,
+  "scripts": {
+    "release": "standard-version --infile CHANGELOG.md --first-release"
+  }
 }
