--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,12 +25,12 @@ jobs:
 
       - name: Export new components
         run: |
-          cd projects/sw-ui
+          cd sw-ui-lib
           node add-component.js
 
       - name: Build library
         run: |
-          cd projects/sw-ui
+          cd sw-ui-lib
           ng build sw-ui
 
       - name: Update version and push changes
@@ -40,7 +40,7 @@ jobs:
           cd projects/sw-ui
           npx standard-version --release-as patch  # or minor/major as per your needs
           cd ../..
-          git add projects/sw-ui/package.json
+          git add sw-ui-lib/projects/sw-ui/package.json
           git commit -m "chore(release): bump version"
           git push --follow-tags origin main  # make sure to push the tags
 
@@ -48,5 +48,5 @@ jobs:
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
         run: |
-          cd projects/sw-ui/dist/sw-ui
+          cd sw-ui-lib/dist/sw-ui
           npm publish
