--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,14 +18,19 @@ jobs:
         with:
           node-version: '20' 
 
+      - name: List files in root
+        run: ls -la
+
       - name: Install dependencies
         run: |
           cd sw-ui-lib
+          ls -la  # List files in sw-ui-lib to confirm location
           npm install
 
       - name: Export new components
         run: |
           cd sw-ui-lib
+          ls -la  # List files in sw-ui-lib again to confirm add-component.js is present
           node add-component.js
 
       - name: Build library
