--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -36,7 +36,7 @@ jobs:
       - name: Build library
         run: |
           cd sw-ui-lib
-          ng build sw-ui
+          ng build
 
       - name: Update version and push changes
         run: |
