--- a/Ui-Library/.github/workflows/ci.yml
+++ b/Ui-Library/.github/workflows/ci.yml
@@ -32,7 +32,7 @@ jobs:
       - name: Build library
         run: |
           cd sw-ui-lib
-          ng build sw-ui
+          ng build 
 
       - name: Update version and push changes
         run: |
