--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -42,7 +42,7 @@ jobs:
         run: |
           git config --global user.name 'github-actions[bot]'
           git config --global user.email 'github-actions[bot]@users.noreply.github.com'
-          cd projects/sw-ui
+          cd sw-ui-lib/projects/sw-ui
           npx standard-version --release-as patch  # or minor/major as per your needs
           cd ../..
           git add sw-ui-lib/projects/sw-ui/package.json
