--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -45,7 +45,8 @@ jobs:
           cd sw-ui-lib/projects/sw-ui
           npx standard-version --release-as patch  # or minor/major as per your needs
           cd ../..
-          git add sw-ui-lib/projects/sw-ui/package.json
+          ls -la
+          git add projects/sw-ui/package.json
           git commit -m "chore(release): bump version"
           git push --follow-tags origin main  # make sure to push the tags
 
