--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -38,15 +38,14 @@ jobs:
           cd sw-ui-lib
           ng build
 
-      - name: Update version and push changes
+      - name: Push changes
         run: |
           git config --global user.name 'github-actions[bot]'
           git config --global user.email 'github-actions[bot]@users.noreply.github.com'
           cd sw-ui-lib/projects/sw-ui
-          npx standard-version --release-as patch  # or minor/major as per your needs
           cd ../..
           git add .
-          git commit -m "chore(release): bump version"
+          git commit -m "New Component added"
           git push --follow-tags origin main  # make sure to push the tags
 
       - name: Login to npm
