deleted unnecessary line

--- a/sw-ui-lib/projects/sw-ui/package.json
+++ b/sw-ui-lib/projects/sw-ui/package.json
@@ -8,8 +8,6 @@
   "dependencies": {
     "tslib": "^2.3.0"
   },
-  "sideEffects": false,
-  "scripts": {
-    "release": "standard-version --infile CHANGELOG.md --first-release"
-  }
+  "sideEffects": false
+  
 }
