--- a/tryial/package.json
+++ b/tryial/package.json
@@ -20,6 +20,7 @@
     "@angular/router": "^15.2.0",
     "@fortawesome/fontawesome-free": "^6.6.0",
     "daly-swlib": "^0.0.1",
+    "dalynaguez-sw-ui": "^0.0.19",
     "rxjs": "~7.8.0",
     "sweetalert2": "^11.12.3",
     "tslib": "^2.3.0",
