--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,9 +26,14 @@ jobs:
       - name: Export new components & extract component meta data into JS
         run: |
           cd sw-ui-lib
-          ls -la
-          node add-component.js
+      - name:  extract component meta data into JS
+        run: |
+          cd sw-ui-lib
           node generate-metadata.js
+           
+      - name: Import meta-data to MongoDB
+        run: |
+          cd sw-ui-lib
           node import-data.js
 
       - name: Install Angular CLI
