--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -59,13 +59,17 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
-          git config --global user.name 'github-actions[bot]'
           git config --global user.email 'github-actions[bot]@users.noreply.github.com'
           cd sw-ui-lib/projects/sw-ui
           cd ../..
           git add .
+          # Check if there are changes to commit
+          if git diff-index --quiet HEAD --; then
+          echo "No changes to commit."
+          else
           git commit -m "New Component added"
-          git push --follow-tags origin main  # make sure to push the tags
+          git push --follow-tags origin main
+          fi
 
       - name: Login to npm
         env:
