--- a/sw-ui-backend/package.json
+++ b/sw-ui-backend/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "start": "node index.js",  
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -13,5 +14,8 @@
     "cors": "^2.8.5",
     "express": "^4.19.2",
     "mongoose": "^8.5.2"
+  },
+  "engines": {
+    "node": "20.16.0"   
   }
 }
