--- a/sw-ui-backend/package.json
+++ b/sw-ui-backend/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js",
+    "start": "node server.js",
+    "build": "ng build --prod",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
