--- a/tryial/package.json
+++ b/tryial/package.json
@@ -21,6 +21,7 @@
     "@fortawesome/fontawesome-free": "^6.6.0",
     "cors": "^2.8.5",
     "dalynaguez-sw-ui": "^1.1.48",
+    "prismjs": "^1.29.0",
     "rxjs": "~7.8.0",
     "sweetalert2": "^11.6.13",
     "tslib": "^2.3.0",
@@ -31,6 +32,7 @@
     "@angular/cli": "~15.2.10",
     "@angular/compiler-cli": "^15.2.0",
     "@types/jasmine": "~4.3.0",
+    "@types/prismjs": "^1.26.4",
     "jasmine-core": "~4.5.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.1.0",
